--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "pg": "^8.8.0"
   }
 }
